--- a/templates/base.html
+++ b/templates/base.html
@@ -76,8 +76,9 @@
         key: "BDV_66hjFZ-UmAPoFewcLdDHu3i2pPxgc-ZtBcDPesJqWM-SmAPBExtw1EhE1zzG7EuSuJje6Z42xAQqflvoFL4",
       });
     </script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />    <script async src="https://www.googletagmanager.com/gtag/js?id=G-79MBGTX27V"></script>
-
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-79MBGTX27V"></script>
     <script type="text/javascript">
       (function (c, l, a, r, i, t, y) {
         c[a] =
@@ -99,7 +100,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
           rel="stylesheet">
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-        <script>
+    <script>
     function showToast(message, time) {
       let toast = document.getElementById('custom_toast');
       toast.querySelector('span').innerHTML = message;
@@ -254,6 +255,9 @@
     {% endblock head %}
   </head>
   <body class="font-Inter mt-24">
+    <!-- Container for stacking multiple toasts -->
+    <div id="toast_container"
+         class="fixed bottom-0 right-0 flex w-full flex-col items-center p-4 space-y-2 z-50"></div>
     <div class="static-bg">
       <svg width="100%" height="100%" viewBox="0 0 800 800">
         <defs>
@@ -295,7 +299,6 @@
       </div>
     </center>
     <script src="https://unpkg.com/flowbite@1.4.7/dist/flowbite.js"></script>
-
     {% if user.is_authenticated %}
       <script>
       let deferredPrompt;
@@ -394,6 +397,27 @@
         mirror: false,
         anchorPlacement: 'top-bottom'
       });
+      </script>
+      <script>
+      function showToast(message, time) {
+        let container = document.getElementById('toast_container');
+        let toast = document.createElement('div');
+        toast.classList.add(
+          'text-sm', 'rounded-2xl', 'bg-neutral-900/70', 'backdrop-blur-xl',
+          'shadow-inset-white', 'text-neutral-100', 'flex', 'items-center',
+          'gap-2', 'px-3', 'py-2', 'transition-all', 'duration-500', 'justify-center',
+        );
+        toast.innerHTML = `
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 text-amber-400">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v3.75m-9.303 3.376c-.866 1.5.217 3.374 1.948 3.374h14.71c1.73 0 2.813-1.874 1.948-3.374L13.949 3.378c-.866-1.5-3.032-1.5-3.898 0L2.697 16.126zM12 15.75h.007v.008H12v-.008z" />
+          </svg>
+          <span>${message}</span>
+        `;
+        container.appendChild(toast);
+        setTimeout(() => {
+          toast.remove();
+        }, time);
+      }
       </script>
     </body>
   </html>
