--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -468,23 +468,40 @@ document.addEventListener('DOMContentLoaded', function() {
 });
   </script>
 {% if messages %}
-<!-- <div class="z-50 w-screen text-6xl h-screen fixed top-0 left-0 flex items-center justify-center">
-  <div class="bg-green-600 text-white p-4 rounded-lg">
-    {{ messages }}
-  </div>
 
-</div> -->
 <script>
   document.addEventListener('DOMContentLoaded', function() {
-
-    console.log("messages cool")
-    console.log("{{ messages }}");
     {% for msg in messages %}
       showToast("{{ msg|escapejs }}", 3000);
     {% endfor %}
   });
 </script>
 {% endif %}
+  {% if form.errors %}
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        {% for err in form.non_field_errors %}
+          showToast("{{ err }}", 3000);
+        {% endfor %}
+    });
+  </script>
+
+  <script>
+    console.log("Errors");
+      // console.log("{{ form.errors }}");
+    </script>
+      {% for field in form %}
+        {% for error in field.errors %}
+        <script>
+            document.addEventListener('DOMContentLoaded', function() {
+
+            console.log("{{ error }}");
+            showToast("{{ error }}", 3000);
+            });
+          </script>
+        {% endfor %}
+      {% endfor %}
+  {% endif %}
 
 
 
