--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -371,13 +371,13 @@
                     <div class="form-field">
                       <label for="id_login">Email or Username</label>
                       <div class="relative">
-                        <input type="text" name="login" class="..." placeholder="Username" />
+                        <input type="text" name="login" class="..." placeholder="Username" required />
                       </div>
                     </div>
                     <div class="form-field">
                       <label for="id_password">Password</label>
                       <div class="relative">
-                        <input type="password" name="password" class="..." placeholder="Password" id="id_password"/>
+                        <input type="password" name="password" class="..." placeholder="Password" id="id_password" required/>
                         <span class="material-symbols-outlined cursor-pointer text-xl absolute top-3 right-3 text-neutral-400"
                               id="togglePassword">visibility</span>
                       </div>
@@ -467,16 +467,6 @@ document.addEventListener('DOMContentLoaded', function() {
 // });
 });
   </script>
-{% if messages %}
-
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-    {% for msg in messages %}
-      showToast("{{ msg|escapejs }}", 3000);
-    {% endfor %}
-  });
-</script>
-{% endif %}
   {% if form.errors %}
     <script>
       document.addEventListener('DOMContentLoaded', function() {
